--- a/sample/src/main/res/layout/activity_for_obserable.xml
+++ b/sample/src/main/res/layout/activity_for_obserable.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_for_obserable"
@@ -7,4 +8,4 @@
     android:layout_height="match_parent"
     tools:context="com.fenrir.app.sample.ForObserableActivity">
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
