--- a/sample/src/main/res/layout/fragment_blank_fragment12.xml
+++ b/sample/src/main/res/layout/fragment_blank_fragment12.xml
@@ -22,16 +22,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="1200dp"
+                android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
                 android:gravity="right"
                 android:textColor="@color/white"
                 android:text="12312e121e\n12312e121e\n12312e121e\n12312e121e\n12312e121e\n12312e121e\n"/>
 
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
