--- a/sample/src/main/res/layout/fragment_blank_fragment22.xml
+++ b/sample/src/main/res/layout/fragment_blank_fragment22.xml
@@ -21,6 +21,11 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Hello blank fragment 22" />
+        android:text="Hello blank fragment 22"
+        android:layout_below="@id/appbar_layout"/>
+
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
